--- a/app/views/admin_tasks/index.html.erb
+++ b/app/views/admin_tasks/index.html.erb
@@ -1,13 +1,16 @@
-<h1>
+<%= stylesheet_link_tag "admin.css" %>
+
+<div>
+	<h1>
 Welcome administrator
 </h1>
 <%= link_to 'Sign out', '/admin_tasks/sign_out' %>
 
-Transfer the money amount to the company you wished
+<div>Transfer the money amount to the company you wished</div>
 <% if flash[:error] %>
-	<div style="color:red"><%= flash[:error] %></div>
+	<div class="alert-error "><%= flash[:error] %></div>
 <% else flash[:success] %>
-	<div style="color:green"><%= flash[:success] %></div>
+	<div class="alert-success"><%= flash[:success] %></div>
 <% end %>
 
 <%= form_for @admin_task do |f| %>
@@ -41,4 +44,4 @@ Transfer the money amount to the company you wished
 </div>
 <div>
  Remaining money in store is: <b><%= @admin_task.available_money %></b>	
-</div>
+</div></div>
